[gd_scene load_steps=23 format=1]

[ext_resource path="res://maze/Game.gd" type="Script" id=1]
[ext_resource path="res://maze/pic/01.jpg" type="Texture" id=2]
[ext_resource path="res://maze/tilesets/tile.tres" type="TileSet" id=3]
[ext_resource path="res://maze/Grid.gd" type="Script" id=4]
[ext_resource path="res://maze/GridVisualizer.gd" type="Script" id=5]
[ext_resource path="res://maze/success.png" type="Texture" id=6]
[ext_resource path="res://maze/fail.png" type="Texture" id=7]
[ext_resource path="res://maze/pic/03.jpg" type="Texture" id=8]
[ext_resource path="res://maze/palette.tscn" type="PackedScene" id=9]
[ext_resource path="res://maze/pic/02.jpg" type="Texture" id=10]
[ext_resource path="res://maze/pic/LEFT_resized.png" type="Texture" id=11]
[ext_resource path="res://maze/pic/RIGHT_resized.png" type="Texture" id=12]
[ext_resource path="res://maze/pic/UP_resized.png" type="Texture" id=13]
[ext_resource path="res://maze/pic/DOWN_resized.png" type="Texture" id=14]
[ext_resource path="res://maze/pic/LE_resized.png" type="Texture" id=15]
[ext_resource path="res://maze/pic/RI_resized.png" type="Texture" id=16]
[ext_resource path="res://maze/pic/FOR_resized.png" type="Texture" id=17]
[ext_resource path="res://fonts/kaiu.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://maze/pic/cooltext288521467882643_resized.png" type="Texture" id=19]
[ext_resource path="res://maze/pic/mono-asustado.png" type="Texture" id=20]
[ext_resource path="res://maze/pic/cooltext288521639039462.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 18 )

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 603.249, 331.007 )
transform/scale = Vector2( 4.17042, 3.84748 )
texture = ExtResource( 2 )

[node name="Grid" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 50, 50 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 65536, 0, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 65544, 0, 65545, 0, 65546, 0, 65547, 0, 65548, 0, 65549, 0, 65550, 0, 65551, 0, 131072, 0, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 0, 131084, 0, 131085, 0, 131086, 0, 131087, 0, 196608, 0, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 196619, 0, 196620, 0, 196621, 0, 196622, 0, 196623, 0, 262144, 0, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 262155, 0, 262156, 0, 262157, 0, 262158, 0, 262159, 0, 327680, 0, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 0, 393216, 0, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 458752, 0, 458753, 0, 458754, 0, 458755, 0, 458756, 0, 458757, 0, 458758, 0, 458759, 0, 458760, 0, 458761, 0, 458762, 0, 458763, 0, 458764, 0, 458765, 0, 458766, 0, 458767, 0, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 589824, 0, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 786452, 0 )
script/script = ExtResource( 4 )

[node name="GridVisualizer" type="Node2D" parent="Grid"]

script/script = ExtResource( 5 )

[node name="success" type="Sprite" parent="Grid"]

visibility/visible = false
transform/pos = Vector2( 618.569, 337.274 )
transform/scale = Vector2( 0.745673, 0.730218 )
z/z = 1
texture = ExtResource( 6 )

[node name="fail" type="Sprite" parent="Grid"]

visibility/visible = false
transform/pos = Vector2( 603.271, 334.454 )
transform/scale = Vector2( 0.8, 0.8 )
z/z = 1
texture = ExtResource( 7 )

[node name="bg 2" type="Sprite" parent="."]

transform/pos = Vector2( 1011.57, 247.806 )
transform/scale = Vector2( 1.72992, 1.61483 )
texture = ExtResource( 8 )

[node name="palette" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 979.891, 49.4584 )

[node name="bg 3" type="Sprite" parent="."]

transform/pos = Vector2( 603.914, 588.571 )
transform/scale = Vector2( 5.41721, 0.672087 )
texture = ExtResource( 10 )

[node name="commands" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 36.0
margin/top = 539.0
margin/right = 1195.0
margin/bottom = 579.0
alignment = 0

[node name="commands1" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 591.0
margin/right = 1193.0
margin/bottom = 631.0
alignment = 0

[node name="command_left" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 571.0
margin/top = 687.0
margin/right = 633.0
margin/bottom = 743.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = true

[node name="command_right" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 632.0
margin/top = 694.0
margin/right = 672.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 12 )
flat = true

[node name="command_up" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 712.0
margin/top = 677.0
margin/right = 764.0
margin/bottom = 723.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 13 )
flat = true

[node name="command_down" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 768.0
margin/top = 684.0
margin/right = 800.0
margin/bottom = 717.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = true

[node name="command_block_start" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 829.0
margin/top = 685.0
margin/right = 861.0
margin/bottom = 711.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = true

[node name="command_block_end" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 881.0
margin/top = 685.0
margin/right = 913.0
margin/bottom = 711.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 16 )
flat = true

[node name="command_reuse" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 957.0
margin/top = 672.0
margin/right = 999.0
margin/bottom = 708.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 17 )
flat = true

[node name="popup_readme" type="WindowDialog" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 74.0
margin/top = 85.0
margin/right = 108.0
margin/bottom = 34.0
popup/exclusive = true
window/title = "Read Me"

[node name="RichTextLabel" type="RichTextLabel" parent="popup_readme"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 36.0
margin/top = 17.0
margin/right = 972.0
margin/bottom = 539.0
custom_fonts/normal_font = SubResource( 1 )
bbcode/enabled = true
bbcode/bbcode = "[center][color=#ffd966]快來協助探險家抓回落跑的猴子助手！
[/color]
[color=#ffd966]利用畫面右側的[/color] [color=#00369b]               [/color][b][color=#ffd966]的[/color][/b][color=#ffd966]按鈕，組合出最短的路徑，
[/color]
[color=#ffd966]然後，點選         ，讓探險家跑去抓住猴子

記住，路徑越短越好哦！
[/color]
[color=#93c47d]《進階玩法》[/color]

[color=#93c47d]有沒有發現在很多關卡，你會一直重複類似的路徑，例如[/color]



[color=#93c47d]這時候有更快的方法喲！[/color]
[color=#93c47d]
利用畫面右側的         ，可以組合出可重複的步驟，

然後用       來重複呼叫它，例如：[/color]



[color=#93c47d]得到的結果是一樣的，但是路徑會比較短喲！[/color][/center]"
visible_characters = -1
percent_visible = 1.0

[node name="Sprite" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 389, 70 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )

[node name="Sprite 2" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 429, 70 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="Sprite 3" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 469, 70 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite 4" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 509, 70 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite 5" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 441.651, 114.558 )
transform/scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 19 )

[node name="Sprite 6" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 282, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite11 3" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 377, 468 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite10 3" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 605, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite7" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 445, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="AnimatedSprite" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 322, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="AnimatedSprite3" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 417, 468 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="AnimatedSprite2" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 645, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="AnimatedSprite1" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 485, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite 7" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 362, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite11" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 457, 468 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite10" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 685, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite8" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 525, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Sprite 8" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 402, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite11 2" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 497, 468 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite10 2" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 725, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite9" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 565, 290 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Sprite 9" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 338.762, 467.275 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )

[node name="Sprite15 2" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 427.695, 379.835 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )

[node name="Sprite 10" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 536.73, 468.275 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )

[node name="Sprite15" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 468.9, 380.835 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )

[node name="Sprite 11" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 432.607, 420.548 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 17 )

[node name="Sprite12" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 572.399, 468.783 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 17 )

[node name="Sprite13" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 611.59, 468.783 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 17 )

[node name="Sprite14" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 650.781, 467.275 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 17 )

[node name="Sprite 12" type="Sprite" parent="popup_readme"]

transform/pos = Vector2( 872.459, 413.972 )
transform/scale = Vector2( 0.0893395, 0.0835795 )
texture = ExtResource( 20 )

[node name="button_readme" type="Button" parent="."]

rect/scale = Vector2( 1.3, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 894.0
margin/top = 413.0
margin/right = 1076.0
margin/bottom = 475.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 21 )
flat = true

[connection signal="pressed" from="button_readme" to="." method="_on_button_readme_pressed"]


